--- a/custom/cassandra.yaml
+++ b/custom/cassandra.yaml
@@ -565,7 +565,7 @@ trickle_fsync_interval_in_kb: 10240
 
 # TCP port, for commands and data
 # For security reasons, you should not expose this port to the internet.  Firewall it if needed.
-storage_port: 7000
+# storage_port: 7000
 
 # SSL port, for encrypted communication.  Unused unless enabled in
 # encryption_options
@@ -737,7 +737,7 @@ column_index_cache_size_in_kb: 2
 #
 # If your data directories are backed by SSD, you should increase this
 # to the number of cores.
-#concurrent_compactors: 1
+# concurrent_compactors: 1
 
 # Number of simultaneous repair validations to allow. Default is unbounded
 # Values less than one are interpreted as unbounded (the default)
