Added SNITCH env and run C* only

--- a/local/dse-suite.yaml
+++ b/local/dse-suite.yaml
@@ -124,6 +124,8 @@ spec:
           value: dse-data
         - name: OPSCENTER_IP
           value: opscenter-0.opscenter.default.svc.cluster.local
+        - name: SNITCH
+          value: GossipingPropertyFileSnitch         
         ports:
         - containerPort: 7000
           name: intra-node-port
